销售记录说明

--- a/app/src/main/assets/help.html
+++ b/app/src/main/assets/help.html
@@ -29,7 +29,7 @@
 <br/>
 <br/>
 <font color="red"><strong>5、销售记录</strong></font><br/>
-查看销售记录，点击右上角按钮按时间筛选某个时间段里的销售记录，输入条形码点击输入法上面的【回车/搜索键】或者扫描药品条形码查看某个药品的销售记录
+分别按照订单和药品查看销售记录，点击右上角按钮按时间筛选某个时间段里的销售记录，输入条形码点击输入法上面的【回车/搜索键】或者扫描药品条形码查看某个药品的销售记录，点击支付类型筛选相应类型的记录
 <br/>
 <br/>
 <font color="red"><strong>6、报损处理 </strong></font><br/>
